# Countdown-Bot3

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
app/: Cargo.toml
app/src/: main.rs
core/: Cargo.toml  build.rs
core/src/: lib.rs
core/src/countdown_bot/: bot.rs  command.rs  config.rs  mod.rs  plugin.rs  state_hook.rs  utils.rs
core/src/countdown_bot/bot/: builtin_command_impl.rs  dispatch_impl.rs  load_plugins_impl.rs  mod.rs  start_impl.rs
core/src/countdown_bot/client/: extra_go_cqhttp.rs  group.rs  guild.rs  message.rs  misc.rs  mod.rs
core/src/countdown_bot/event/: handle.rs  manager.rs  message.rs  meta.rs  mod.rs  notice.rs  request.rs
core/src/countdown_bot/message/: macro.rs  mod.rs  segment.rs  segment_impl.rs  wrapper.rs
core/src/countdown_bot/schedule_loop/: handler.rs  mod.rs
core/tests/: test.rs
countdown-bot-proc-macro/: Cargo.toml
countdown-bot-proc-macro/src/: lib.rs
docker/: Dockerfile  check.py
plugins/broadcast/: Cargo.toml
plugins/broadcast/src/: lib.rs
plugins/bullshit/: Cargo.toml
plugins/bullshit/src/: bullshit.rs  bullshit_data.rs  lib.rs  shit.rs
plugins/cats/: Cargo.toml
plugins/cats/src/: cat_impl.rs  config.rs  lib.rs  misc_impl.rs  models.rs  tencent_cloud.rs  upload_impl.rs
plugins/cats/tests/: test_main.rs
plugins/couplet/: Cargo.toml
plugins/couplet/src/: lib.rs
plugins/covid19/: Cargo.toml
plugins/covid19/src/: common.rs  covid19_impl.rs  covnews_impl.rs  lib.rs
plugins/demo/: Cargo.toml
plugins/demo/src/: lib.rs
plugins/dns_query/: Cargo.toml
plugins/dns_query/src/: lib.rs
plugins/docker_runner/: Cargo.toml
plugins/docker_runner/src/: config.rs  exec_impl.rs  lib.rs  misc_impl.rs
plugins/ds_drawer_plugin/: Cargo.toml
plugins/ds_drawer_plugin/src/: impl.rs  lib.rs
plugins/ds_drawer_plugin/src/sam/: mod.rs
plugins/ds_drawer_plugin/tests/: test_main.rs
plugins/fun/: Cargo.toml
plugins/fun/src/: lib.rs
plugins/genshin_saying/: Cargo.toml
plugins/genshin_saying/src/: lib.rs
plugins/group_noticer/: Cargo.toml
plugins/group_noticer/src/: lib.rs
plugins/hitokoto/: Cargo.toml
plugins/hitokoto/src/: lib.rs
plugins/jiuge/: Cargo.toml
plugins/jiuge/src/: help_str.rs  lib.rs
plugins/jiuge/src/impl/: arousic.rs  jiju.rs  jueju.rs  lushi.rs  mod.rs  songci.rs  util.rs
plugins/math/: Cargo.toml
plugins/math/src/: command_impl.rs  config.rs  exec_impl.rs  lib.rs  template.py
plugins/message_sender/: Cargo.toml
plugins/message_sender/src/: config.rs  lib.rs
plugins/music_163/: Cargo.toml
plugins/music_163/src/: impl.rs  lib.rs
plugins/music_gen/: Cargo.toml
plugins/music_gen/src/: cache.rs  command.rs  command_entry.rs  config.rs  help.rs  lib.rs  luogu_fetcher.rs  notes.rs  utils.rs
plugins/music_gen/src/pysynth/: makewav_impl.rs  mkfreq.rs  mod.rs  pysynth_b.rs
plugins/music_gen/tests/: test.rs
plugins/oierdb_query/: Cargo.toml
plugins/oierdb_query/src/: lib.rs
plugins/oiwiki_query/: Cargo.toml
plugins/oiwiki_query/src/: lib.rs
plugins/qrcode_make/: Cargo.toml
plugins/qrcode_make/src/: lib.rs
plugins/read/: Cargo.toml
plugins/read/src/: lib.rs
plugins/sign_in/: Cargo.toml
plugins/sign_in/src/: command_group_query_impl.rs  command_sign_in_impl.rs  command_user_query_impl.rs  fxxk_misc_impl.rs  lib.rs  misc_impl.rs  models.rs
plugins/simple_rand/: Cargo.toml
plugins/simple_rand/src/: lib.rs
plugins/weather/: Cargo.toml
plugins/weather/src/: command_impl.rs  lib.rs
plugins/zxhdmx/: Cargo.toml
plugins/zxhdmx/src/: config.rs  data.json  edit.html  game.py  help_str.rs  lib.rs  utils.rs  web.rs
plugins/zxhdmx/src/handle_impl/: command.rs  event.rs  mod.rs
plugins/zxhdmx/src/pytypes/: mod.rs  wrapped_bot.rs  wrapped_plugin.rs
