[workspace]
members = ["core", "app", "plugins/simple_rand", "plugins/weather", "plugins/couplet", "plugins/broadcast", "plugins/group_noticer"]
default-members = ["app", "core"]

[profile.release]
opt-level = 3
lto = true
debug = 0
overflow-checks = false

[profile.dev]
incremental = true