[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
countdown-bot3 = { path = "../core" }
tokio = "1.15.0"

demo = { path = "../plugins/demo" }
simple_rand = { path = "../plugins/simple_rand" }
weather = { path = "../plugins/weather" }
couplet = { path = "../plugins/couplet" }
broadcast = { path = "../plugins/broadcast" }