[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
countdown-bot3 = { path = "../core" }
tokio = "1.15.0"

simple_rand = { path = "../plugins/simple_rand" }
weather = { path = "../plugins/weather" }
couplet = { path = "../plugins/couplet" }
broadcast = { path = "../plugins/broadcast" }
group_noticer = { path = "../plugins/group_noticer" }
hitokoto = { path = "../plugins/hitokoto" }
fun = { path = "../plugins/fun" }
oierdb_query = { path = "../plugins/oierdb_query" }
oiwiki_query = { path = "../plugins/oiwiki_query" }
qrcode_make = { path = "../plugins/qrcode_make" }
dns_query = { path = "../plugins/dns_query" }
music_163 = { path = "../plugins/music_163" }
jiuge = { path = "../plugins/jiuge" }
covid19 = { path = "../plugins/covid19" }
bullshit = { path = "../plugins/bullshit" }
ds_drawer_plugin = { path = "../plugins/ds_drawer_plugin" }
docker_runner = { path = "../plugins/docker_runner" }
cats = { path = "../plugins/cats" }
math = { path = "../plugins/math" }
sign_in = { path = "../plugins/sign_in" }
music_gen = { path = "../plugins/music_gen" }
