[package]
name = "couplet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
countdown-bot3 = { path = "../../core" }
async-trait = "0.1.52"
serde = "1.0.132"
reqwest = { version = "0.11.8"}
serde_json = "1.0.73"
tokio = "1.15.0"
anyhow = "1.0.52"
downcast-rs = "1.2.0"
