[package]
name = "plugins_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
countdown-bot3 = { path = "../../core" }
log = "0.4.14"
flexi_logger = "0.22.0"
async-trait = "0.1.52"
tokio = { version = "1.15.0", features = ["sync"] }
anyhow = "1.0.52"
