[package]
name = "fun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
countdown-bot3 = { path = "../../core" }
async-trait = "0.1.52"
serde = "1.0.132"
reqwest = { version = "0.11.8"}
serde_json = "1.0.73"
tokio = "1.15.0"
chrono = "0.4.19"
log = "0.4.14"
flexi_logger = "0.22.0"