[package]
name = "math"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
countdown-bot3 = { path = "../../core" }
async-trait = "0.1.52"
tokio = { version = "1.15.0", features = ["sync"] }
log = "0.4.14"
flexi_logger = "0.22.0"
anyhow = "1.0.52"
serde = "1.0.132"
rand = "0.8.4"
serde_json = "1.0.74"
tempfile = "3.3.0"
base64 = "0.13.0"
bollard = "0.11.1"
futures-util = "0.3.19"
html-escape = "0.2.9"