[package]
name = "music_163"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
countdown-bot3 = { path = "../../core" }
async-trait = "0.1.52"
serde = "1.0.132"
reqwest = { version = "0.11.8", features = ["cookies"]}
serde_json = "1.0.73"
tokio = "1.15.0"
anyhow = "1.0.52"
log = "0.4.14"
clap = "2.34.0"
