[package]
name = "music_gen"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
countdown-bot3 = { path = "../../core" }
async-trait = "0.1.52"
tokio = { version = "1.15.0", features = ["sync"] }
log = "0.4.14"
flexi_logger = "0.22.0"
anyhow = { version = "1.0.52", features = ["backtrace"] }
serde = "1.0.132"
serde_json = "1.0.74"
axum = "0.4.4"
lazy_static = "1.4.0"
ndarray = { version = "0.15.4", features = ["rayon"]}
wav = "1.0.0"
reqwest = "0.11.9"
regex = "1.5.4"
urlencoding = "2.1.0"
clap = "3.0.13"
async-recursion = "1.0.0"
base64 = "0.13.0"
redis = { version = "0.21.5", features = ["aio", "tokio-comp"]}
sha2 = "0.10.1"
hex = "0.4.3"