[package]
name = "read"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
countdown-bot3 = { path = "../../core" }
async-trait = "0.1.52"
tokio = { version = "1.15.0", features = ["full"] }
log = "0.4.14"
flexi_logger = "0.22.0"
anyhow = "1.0.52"
serde = "1.0.132"
reqwest = { version = "0.11.8", features = ["gzip"]}
serde_json = "1.0.73"
urlencoding = "2.1.0"
base64 = "0.13.0"
