[package]
name = "sign_in"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
countdown-bot3 = { path = "../../core" }
async-trait = "0.1.52"
tokio = { version = "1.15.0", features = ["sync"] }
log = "0.4.14"
flexi_logger = "0.22.0"
anyhow = { version = "1.0.52", features = ["backtrace"] }
serde = "1.0.132"
rand = "0.8.4"
serde_json = "1.0.74"
chrono = "0.4.19"
rusqlite = { version = "0.26.3", features=["bundled"] }
fallible-iterator = "0.2.0"