[package]
name = "simple_rand"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]
# crate-type = ["cdylib", "dylib"]

[dependencies]
countdown-bot3 = { path = "../../core" }
async-trait = "0.1.52"
tokio = { version = "1.15.0", features = ["sync"] }
log = "0.4.14"
flexi_logger = "0.22.0"
anyhow = "1.0.52"
serde = "1.0.132"
num-bigint = { version = "0.4.3", features = ["rand"]}
rand = "0.8.4"
