[package]
name = "zxhdmx"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
countdown-bot3 = { path = "../../core" }
async-trait = "0.1.52"
tokio = { version = "1.15.0", features = ["full"] }
log = "0.4.14"
flexi_logger = "0.22.0"
anyhow = "1.0.52"
serde = "1.0.132"
serde_json = "1.0.73"
rustpython-vm = { git = "https://github.com/RustPython/RustPython", features = ["freeze-stdlib"], rev = "bd295e0f" }
rustpython-stdlib = { git = "https://github.com/RustPython/RustPython", rev = "bd295e0f" }
futures = "0.3.19"
num-bigint = "0.4.3"
